--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
     </servlet-mapping>
 
     <session-config>
-        <session-timeout>10</session-timeout>
+        <session-timeout>1</session-timeout>
     </session-config>
 
     <welcome-file-list>
@@ -88,5 +88,9 @@
         <location>/WEB-INF/errorpages/500.xhtml</location>
     </error-page>
 
-
+    <error-page>
+        <exception-type>jakarta.faces.application.ViewExpiredException</exception-type>
+        <location>/WEB-INF/errorpages/expired.xhtml</location>
+    </error-page>
+ 
 </web-app>
