--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
         <project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
         <jakartaee-api.version>10.0.0</jakartaee-api.version>
-        <compiler-plugin.version>3.13.0</compiler-plugin.version>
+        <compiler-plugin.version>3.14.0</compiler-plugin.version>
         <war-plugin.version>3.4.0</war-plugin.version>
 
-        <version.wildfly>35.0.0.Final</version.wildfly>
-        <version.wildfly-jar-plugin>11.0.2.Final</version.wildfly-jar-plugin>
+        <version.wildfly>36.0.0.Final</version.wildfly>
+        <version.wildfly-jar-plugin>12.0.0.Final</version.wildfly-jar-plugin>
         <plugin.fork.embedded>true</plugin.fork.embedded>
     </properties>
 
@@ -29,7 +29,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.11.4</version>
+            <version>5.12.2</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -48,7 +49,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.13.0</version>
+            <version>1.13.1</version>
         </dependency>
     </dependencies>
 
