--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
         <project.report.sourceEncoding>UTF-8</project.report.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
         <jakartaee-api.version>10.0.0</jakartaee-api.version>
-        <compiler-plugin.version>3.14.0</compiler-plugin.version>
+        <compiler-plugin.version>3.14.1</compiler-plugin.version>
         <war-plugin.version>3.4.0</war-plugin.version>
 
-        <version.wildfly>36.0.0.Final</version.wildfly>
+        <version.wildfly>38.0.0.Final</version.wildfly>
         <version.wildfly-jar-plugin>12.0.0.Final</version.wildfly-jar-plugin>
         <plugin.fork.embedded>true</plugin.fork.embedded>
     </properties>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.12.2</version>
+            <version>6.0.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -43,14 +43,35 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.3.232</version>
+            <version>2.4.240</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.13.1</version>
+            <version>1.14.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.microprofile.rest.client</groupId>
+            <artifactId>microprofile-rest-client-api</artifactId>
+            <version>4.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+            <version>3.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+            <artifactId>microprofile-fault-tolerance-api</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -80,7 +101,7 @@
                             <location>wildfly@maven(org.jboss.universe:community-universe)#${version.wildfly}</location>
                         </feature-pack>
                         <feature-pack>
-                            <location>org.wildfly:wildfly-datasources-galleon-pack:9.1.0.Final</location>
+                            <location>org.wildfly:wildfly-datasources-galleon-pack:11.1.0.Final</location>
                         </feature-pack>
                     </featurePacks>
                     <layers>
@@ -91,6 +112,9 @@
                         <layer>jpa</layer>
                         <layer>jsf</layer>
                         <layer>h2database-default-datasource</layer>
+                        <layer>microprofile-rest-client</layer>
+                        <layer>microprofile-config</layer>
+                        <layer>microprofile-fault-tolerance</layer>
                     </layers>
                     <excluded-layers>
                         <layer>deployment-scanner</layer>
