add TempDirDataCache with example Products page

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,2 +1,5 @@
 rest.UsersClient/mp-rest/url=http://localhost:8080
 rest.UsersClient/mp-rest/scope=jakarta.enterprise.context.ApplicationScoped
+
+rest.ProductsClient/mp-rest/url=http://localhost:8080
+rest.ProductsClient/mp-rest/scope=jakarta.enterprise.context.ApplicationScoped
